--- a/institution_angular/src/app/pages/home/home.component.scss
+++ b/institution_angular/src/app/pages/home/home.component.scss
@@ -19,6 +19,17 @@ mat-drawer{
   padding: 10px;
 }
 
+.login-button{
+  position: fixed;
+  right: 95px;
+  top: 15px;
+  text-align: center;
+  color: #1200ff;
+  background: rgb(45, 255, 28);
+  line-height: 50px;
+  z-index: 999;
+}
+
 .logout-button{
   position: fixed;
   right: 95px;
