--- a/institution_angular/src/app/pages/home/menu/menu.component.html
+++ b/institution_angular/src/app/pages/home/menu/menu.component.html
@@ -1,7 +1,7 @@
 <!--<mat-icon aria-hidden="false" aria-label=" filter icon">filter_alt</mat-icon>-->
 <app-menu-public *ngIf="!authService.isAuthenticated()"></app-menu-public>
 <div *ngIf="authService.isAuthenticated()">
-<app-menu-owner *ngIf="authService.isOwner()"></app-menu-owner>
-<app-menu-developer *ngIf="authService.isDeveloper()"></app-menu-developer>
+    <app-menu-owner *ngIf="authService.isOwner()"></app-menu-owner>
+    <app-menu-developer *ngIf="authService.isDeveloper()"></app-menu-developer>
 </div>
-<a [routerLink] (click)="logout()">Logout <i class="icon-login"></i></a>
+<!--<a [routerLink] (click)="logout()">Logout <i class="icon-login"></i></a>-->
