--- a/institution_angular/src/app/pages/home/menu/menu-public/menu-public.component.html
+++ b/institution_angular/src/app/pages/home/menu/menu-public/menu-public.component.html
@@ -8,7 +8,7 @@
         <div class="container" fxFill *ngFor="let item of navItems">
             <!-- Handle branch node buttons here -->
             <div class="p-1" *ngIf="item.children && item.children.length > 0">
-                <a class="menu-level1" mat-button [matMenuTriggerFor]="menu.childMenu" style="border-radius: 10px; width: 150px; background-color: #e8c213;"
+                <a class="menu-level1" mat-button [matMenuTriggerFor]="menu.childMenu" style="border-radius: 10px; width: 150px;"
                    [disabled]="item.disabled" data-aos="fade-right" data-aos-duration="4000" data-aos-delay="200">
                     {{item.displayName}}<i class="bi bi-caret-down-fill"></i>
                 </a>
