--- a/institution_angular/src/app/pages/home/menu/menu-public/menu-public.component.scss
+++ b/institution_angular/src/app/pages/home/menu/menu-public/menu-public.component.scss
@@ -1,3 +1,9 @@
+::ng-deep .menu-level1{
+  margin-top: 15px;
+  background: linear-gradient(#7be640, #cbe522);
+}
+
+
 
 .login-button{
   position: fixed;
