--- a/institution_angular/src/app/pages/home/menu/menu-item/menu-item.component.html
+++ b/institution_angular/src/app/pages/home/menu/menu-item/menu-item.component.html
@@ -1,7 +1,7 @@
 <!--https://stackblitz.com/edit/dynamic-nested-topnav-menu?file=app%2Ffirst%2Ffirst.component.html-->
 
 
-<mat-menu #childMenu="matMenu" [overlapTrigger]="false">
+<mat-menu #childMenu="matMenu" class="level2" [overlapTrigger]="false">
   <span *ngFor="let child of items">
     <!-- Handle branch node menu items -->
     <span *ngIf="child.children && child.children.length > 0">
