--- a/institution_angular/src/app/pages/home/child-pages/student/student.component.html
+++ b/institution_angular/src/app/pages/home/child-pages/student/student.component.html
@@ -2,10 +2,9 @@
 
     <div class="container px-4 px-lg-5 text-center">
         <h1 class="mb-1" data-aos="fade-right" data-aos-delay="400"  data-aos-offset="300">
-            Welcome to Institution Management System
+            “Live as if you were to die tomorrow. Learn as if you were to live forever” – Mahatma Gandhi
         </h1>
         <h3 class="mb-5"><em>Here root of education is also SWEET</em></h3>
-        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
         <div data-aos="fade-up" data-aos-once="true">
             the content
         </div>
