--- a/institution_angular/src/app/pages/home/child-pages/student/student.component.scss
+++ b/institution_angular/src/app/pages/home/child-pages/student/student.component.scss
@@ -22,7 +22,7 @@ $color-black-68: #dea110;
   height: auto;
   padding-top: 8rem;
   padding-bottom: 8rem;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../../../../../assets/img/bg-java.jpg");
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url("../../../../../assets/img/bg-student.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
